z-index products vs. menu fixed

--- a/css/main.css
+++ b/css/main.css
@@ -277,7 +277,7 @@ ul {
 .is-open {
   display: block;
   position: fixed;
-  z-index: 10;
+  z-index: 100;
   padding-left: 20px;
   padding-right: 20px;
   overflow-y: scroll;
@@ -1039,7 +1039,7 @@ ul {
   -webkit-transform: translate(-50%, -45%);
           transform: translate(-50%, -45%);
   position: absolute;
-  z-index: 100;
+  z-index: 50;
   display: block;
   content: '';
   width: 249px;
@@ -1106,7 +1106,7 @@ ul {
   -webkit-transform: translate(-50%, -45%);
           transform: translate(-50%, -45%);
   position: absolute;
-  z-index: 100;
+  z-index: 50;
   display: block;
   content: '';
   width: 249px;
@@ -1173,7 +1173,7 @@ ul {
   -webkit-transform: translate(-50%, -45%);
           transform: translate(-50%, -45%);
   position: absolute;
-  z-index: 100;
+  z-index: 50;
   display: block;
   content: '';
   width: 249px;
