--- a/src/sass/components/_menu.scss
+++ b/src/sass/components/_menu.scss
@@ -58,7 +58,7 @@
 .is-open {
   display: block;
   position: fixed;
-  z-index: 10;
+  z-index: 100;
   padding-left: 20px;
   padding-right: 20px;
   overflow-y: scroll;
