--- a/src/sass/layout/_products.scss
+++ b/src/sass/layout/_products.scss
@@ -21,7 +21,7 @@
     left: 50%;
     transform: translate(-50%, -45%);
     position: absolute;
-    z-index: 100;
+    z-index: 50;
     display: block;
     content: '';
     width: 249px;
@@ -80,7 +80,7 @@
     left: 50%;
     transform: translate(-50%, -45%);
     position: absolute;
-    z-index: 100;
+    z-index: 50;
     display: block;
     content: '';
     width: 249px;
@@ -139,7 +139,7 @@
     left: 50%;
     transform: translate(-50%, -45%);
     position: absolute;
-    z-index: 100;
+    z-index: 50;
     display: block;
     content: '';
     width: 249px;
